整理 CSS 代码，改用 SCSS 预处理器处理 CSS 代码

--- a/.gitignore
+++ b/.gitignore
@@ -254,7 +254,7 @@ include/sqlite3.h
 include/unqlite.h
 include/config.h
 UWP/[Aa]ssets/*.xml
-UWP/[Aa]ssets/*.css
+UWP/[Aa]ssets/stylesheets
 UWP/[Aa]ssets/*.ttf
 UWP/[Ll]ocales/
 UWP/BundleArtifacts
