--- a/UWP/UWP.vcxproj.filters
+++ b/UWP/UWP.vcxproj.filters
@@ -58,6 +58,20 @@
     <Filter Include="include">
       <UniqueIdentifier>{a90a0144-43d9-4e24-9fc3-813c67256943}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\ui\widgets">
+      <UniqueIdentifier>{d05f0bba-9f1d-4d49-83e4-5c54349c5ded}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\ui\views">
+      <UniqueIdentifier>{c3660b53-2894-45f6-9125-2515d9231703}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="资产\stylesheets">
+      <UniqueIdentifier>{5badf4ec-558d-4a25-be3a-ebc2781473fb}</UniqueIdentifier>
+      <Extensions>.css</Extensions>
+    </Filter>
+    <Filter Include="资产\views">
+      <UniqueIdentifier>{db6ff301-5af6-4363-8bb4-17548d1940c4}</UniqueIdentifier>
+      <Extensions>.xml</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
@@ -87,69 +101,6 @@
     <ClCompile Include="..\src\lib\thumb_db.c">
       <Filter>src\lib</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\ui\browser.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\dialog_confirm.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\dialog_progress.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\dialog_prompt.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\dropdown.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\filesync.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\progressbar.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\sidebar.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\splashscreen.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\starrating.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\switch.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\textview_i18n.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\thumbview.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\timeseparator.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\ui.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\view_folders.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\view_home.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\view_picture.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\view_picture_info.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\view_search.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\view_settings.c">
-      <Filter>src\ui</Filter>
-    </ClCompile>
     <ClCompile Include="LCUIInput.cpp" />
     <ClCompile Include="LCUIRenderer.cpp" />
     <ClCompile Include="bridge.cpp" />
@@ -157,7 +108,70 @@
     <ClCompile Include="..\src\lib\file_storage.c">
       <Filter>src\lib</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\ui\dialog_password.c">
+    <ClCompile Include="..\src\ui\views\folders.c">
+      <Filter>src\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\views\home.c">
+      <Filter>src\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\views\picture.c">
+      <Filter>src\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\views\picture_info.c">
+      <Filter>src\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\views\search.c">
+      <Filter>src\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\views\settings.c">
+      <Filter>src\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\browser.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\dialog_confirm.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\dialog_password.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\dialog_progress.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\dialog_prompt.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\dropdown.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\filesync.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\progressbar.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\sidebar.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\splashscreen.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\starrating.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\switch.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\textview_i18n.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\thumbview.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\widgets\timeseparator.c">
+      <Filter>src\ui\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\ui.c">
       <Filter>src\ui</Filter>
     </ClCompile>
   </ItemGroup>
@@ -256,15 +270,6 @@
     <None Include="Locales\zh-tw.yaml">
       <Filter>Locales</Filter>
     </None>
-    <None Include="Assets\ui-view-picture-info.xml">
-      <Filter>资产</Filter>
-    </None>
-    <None Include="Assets\ui-view-picture.xml">
-      <Filter>资产</Filter>
-    </None>
-    <None Include="Assets\ui.xml">
-      <Filter>资产</Filter>
-    </None>
     <None Include="LCUI_D.dll">
       <Filter>dll</Filter>
     </None>
@@ -280,14 +285,14 @@
     <None Include="yaml.dll">
       <Filter>dll</Filter>
     </None>
-    <None Include="Assets\stylesheets\iconfont.css">
-      <Filter>资产</Filter>
+    <None Include="Assets\stylesheets\themes\green.css">
+      <Filter>资产\stylesheets</Filter>
     </None>
     <None Include="Assets\stylesheets\main.css">
-      <Filter>资产</Filter>
+      <Filter>资产\stylesheets</Filter>
     </None>
-    <None Include="Assets\stylesheets\themes\green.css">
-      <Filter>资产</Filter>
+    <None Include="Assets\stylesheets\iconfont.css">
+      <Filter>资产\stylesheets</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -297,5 +302,16 @@
     <Font Include="Assets\iconfont.ttf">
       <Filter>资产</Filter>
     </Font>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="Assets\views\picture_info.xml">
+      <Filter>资产\views</Filter>
+    </Xml>
+    <Xml Include="Assets\views\picture.xml">
+      <Filter>资产\views</Filter>
+    </Xml>
+    <Xml Include="Assets\views\main.xml">
+      <Filter>资产\views</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
